samples/_failures_safe/1761597192_99170b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40ce1820.c: In function ‘main’:
./samples/SAFE/__tmp_40ce1820.c:145:5: error: expected expression at end of input
  145 |     if (result.data ==
      |     ^~
./samples/SAFE/__tmp_40ce1820.c:145:5: error: expected declaration or statement at end of input
